shade jar implemented.